# Gnome-Schemes

./: README.md  me.hergert.Schemes.Devel.json  meson.build  meson_options.txt  schemes.doap
data/: me.hergert.Schemes.appdata.xml.in.in  me.hergert.Schemes.desktop.in.in  me.hergert.Schemes.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: build-ident.h.in  main.c  meson.build  schemes-application.c  schemes-application.h  schemes-color-popover.ui  schemes-color-row.c  schemes-color-row.h  schemes-color-row.ui  schemes-color.c  schemes-color.h  schemes-scheme.c  schemes-scheme.h  schemes-style-row.c  schemes-style-row.h  schemes-style-row.ui  schemes-style.c  schemes-style.h  schemes-styles.defs  schemes-window.c  schemes-window.h  schemes-window.ui  schemes-xml.h  schemes.gresource.xml  style.css  wcag.c  wcag.h
src/examples/: c  cpp  css  go  haskell  html  js  json  lua  markdown  python3  ruby  rust  vala  xml
